Add spotless plugin with AOSP style linter