@@ -4,20 +4,16 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.sun.jersey.api.client.Client;
 import com.sun.jersey.api.client.ClientResponse;
 import com.sun.jersey.api.client.WebResource;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.io.IOException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-
-/**
- * Created by hoszua on 07/07/2016.
- */
+/** Created by hoszua on 07/07/2016. */
 public class AppKeyAndSessionProvider {
 
     private final Logger logger = LoggerFactory.getLogger(getClass().getName());
@@ -25,10 +21,10 @@ public class AppKeyAndSessionProvider {
     private final Duration timeout;
     private final Duration sessionExpireTime;
 
-    private String appkey;
-    private String host;
-    private String password;
-    private String username;
+    private final String appkey;
+    private final String host;
+    private final String password;
+    private final String username;
 
     private AppKeyAndSession session;
 
@@ -37,28 +33,29 @@ public class AppKeyAndSessionProvider {
     public static final String SSO_HOST_ES = "identitysso.betfair.es";
     private ObjectMapper mapper = new ObjectMapper();
 
-
-    public AppKeyAndSessionProvider(String ssoHost, String appkey, String username, String password) {
+    public AppKeyAndSessionProvider(
+            String ssoHost, String appkey, String username, String password) {
         this.host = ssoHost;
         this.appkey = appkey;
         this.username = username;
         this.password = password;
         this.timeout = Duration.ofSeconds(30);
-        //4hrs is normal expire time
+        // 4hrs is normal expire time
         this.sessionExpireTime = Duration.ofHours(3);
     }
 
     /**
-     * Constructs a new session token via identity SSO.
-     * Note: These are not cached.
+     * Constructs a new session token via identity SSO. Note: These are not cached.
+     *
      * @return
      * @throws IOException Thrown if authentication call fails
      * @throws InvalidCredentialException Thrown if authentication response is fail
      */
     public AppKeyAndSession getOrCreateNewSession() throws IOException, InvalidCredentialException {
         if (session != null) {
-            //have a cached session - is it expired
-            if ((session.getCreateTime().plus(sessionExpireTime)).isAfter(Instant.now(Clock.systemUTC()))) {
+            // have a cached session - is it expired
+            if ((session.getCreateTime().plus(sessionExpireTime))
+                    .isAfter(Instant.now(Clock.systemUTC()))) {
                 logger.info("SSO Login - session not expired - re-using");
                 return session;
             } else {
@@ -68,43 +65,45 @@ public class AppKeyAndSessionProvider {
         logger.info("SSO Login host={}, appkey={}, username={}", host, appkey, username);
         SessionDetails sessionDetails;
         try {
-            String uri = String.format("https://%s/api/login?username=%s&password=%s",
-                    host,
-                    URLEncoder.encode(username, StandardCharsets.UTF_8.name()),
-                    URLEncoder.encode(password, StandardCharsets.UTF_8.name()));
+            String uri =
+                    String.format(
+                            "https://%s/api/login?username=%s&password=%s",
+                            host,
+                            URLEncoder.encode(username, StandardCharsets.UTF_8),
+                            URLEncoder.encode(password, StandardCharsets.UTF_8));
 
             Client client = Client.create();
             client.setConnectTimeout((int) (timeout.getSeconds() * 1000));
             WebResource webResource = client.resource(uri);
 
-            ClientResponse clientResponse = webResource
-                    .accept("application/json")
-                    .header("X-Application", appkey)
-                    .header("Content-Type", "application/x-www-form-urlencoded")
-                    .post(ClientResponse.class);
+            ClientResponse clientResponse =
+                    webResource
+                            .accept("application/json")
+                            .header("X-Application", appkey)
+                            .header("Content-Type", "application/x-www-form-urlencoded")
+                            .post(ClientResponse.class);
 
             mapper = new ObjectMapper();
-            sessionDetails = mapper.readValue(clientResponse.getEntityInputStream(), SessionDetails.class);
+            sessionDetails =
+                    mapper.readValue(clientResponse.getEntityInputStream(), SessionDetails.class);
 
             logger.info("{}: Response: {}", host, sessionDetails);
-
 
         } catch (Exception e) {
             throw new IOException("SSO Authentication - call failed:", e);
         }
 
-        //got a response - decode
+        // got a response - decode
         if (sessionDetails != null && "SUCCESS".equals(sessionDetails.status)) {
             session = new AppKeyAndSession(appkey, sessionDetails.token);
         } else {
-            throw new InvalidCredentialException("SSO Authentication - response is fail: " + sessionDetails.error);
+            throw new InvalidCredentialException(
+                    "SSO Authentication - response is fail: " + sessionDetails.error);
         }
         return session;
     }
 
-    /**
-     * Expires cached token
-     */
+    /** Expires cached token */
     public void expireTokenNow() {
         logger.info("SSO Login - expiring session token now");
         session = null;
@@ -124,6 +123,4 @@ public class AppKeyAndSessionProvider {
     public Duration getSessionExpireTime() {
         return sessionExpireTime;
     }
-
-
 }
